--- a/chat.html
+++ b/chat.html
@@ -37,7 +37,8 @@
         
 
         // creating websocket
-        const ws = new WebSocket("ws://idroomschatapp.herokuapp.com");
+        // const ws = new WebSocket("ws://idroomschatapp.herokuapp.com");
+        const ws = new WebSocket("ws://localhost:3000");
         let roomid = "";
         let from = "";
 
