--- a/chat.html
+++ b/chat.html
@@ -38,7 +38,7 @@
 
         // creating websocket
         // const ws = new WebSocket("ws://idroomschatapp.herokuapp.com");
-        const ws = new WebSocket("ws://localhost:3000");
+        const ws = new WebSocket("wss://localhost:3000");
         let roomid = "";
         let from = "";
 
