--- a/chat.html
+++ b/chat.html
@@ -37,8 +37,8 @@
         
 
         // creating websocket
-        // const ws = new WebSocket("ws://idroomschatapp.herokuapp.com");
-        const ws = new WebSocket("wss://localhost:3000");
+        const ws = new WebSocket("wss://idroomschatapp.herokuapp.com");
+        //const ws = new WebSocket("wss://localhost:3000");
         let roomid = "";
         let from = "";
 
