adding typing feature

--- a/chat.html
+++ b/chat.html
@@ -38,8 +38,8 @@
         
 
         // creating websocket
-        // const ws = new WebSocket("wss://idroomschatapp.herokuapp.com");
-        const ws = new WebSocket("wss://localhost:3000");
+        const ws = new WebSocket("wss://idroomschatapp.herokuapp.com");
+        // const ws = new WebSocket("wss://localhost:3000");
         let roomid = "";
         let from = "";
         let rtname = "";
